bld/hatrun fixes after PR 278